--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
     <title>Typr</title>
 </head>
 <body>
-    <div class="typewriter"><h1>Typr</h1></div>
+    <div class="typewriter"><h1>Typr: Typing Game</h1></div>
     <div id="wrapper">
         <div id="clock"></div>
         <div id="score"></div>
         <div id="typr"></div>
         <div id="userOutput"><input type="text" id="userInput"></div>
-        <div id="buttonsdiv"><button id="start" class ="button" onclick="gameTimer()">Start Game</button> <button id="reset" class ="button" onclick="resetGame()">Reset Game</button></div>
+        <div id="buttonsdiv"><button id="start" class ="button">Start Game</button> <button id="reset" class ="button">Reset Game</button> <button id="instructionsb" class ="button" onclick="">Instructions</button></div>
+        <div id="instructionsd">
+            <ul>
+                <li>Correctly type all the words to gain points.</li>
+                <li>Race against the clock to get as many points as you can.</li>
+            </ul>
+        </div>
     </div>
+    <div id="mediaQ">Sorry, this game can't be played at this width.</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="main.js"></script>
+<script src="game.js"></script>
+<script src="word.js"></script>
 </body>
 </html>
