--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <title>Typr</title>
+    <title>Typr: Typing Game</title>
 </head>
 <body>
-    <div class="typewriter"><h1>Typr: Typing Game</h1></div>
+    <div class="typewriter"><h1>Typr</h1></div>
     <div id="wrapper">
         <div id="clock"></div>
         <div id="score"></div>
         <div id="typr"></div>
+        <div id="congratsd"></div>
+        <div id="finalscore"></div>
         <div id="userOutput"><input type="text" id="userInput"></div>
         <div id="buttonsdiv"><button id="start" class ="button">Start Game</button> <button id="reset" class ="button">Reset Game</button> <button id="instructionsb" class ="button" onclick="">Instructions</button></div>
         <div id="instructionsd">
             <ul>
                 <li>Correctly type all the words to gain points.</li>
                 <li>Race against the clock to get as many points as you can.</li>
+                <li>You only have 60 seconds.</li>
             </ul>
         </div>
     </div>
