cleaned up code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="congratsd"></div>
         <div id="finalscore"></div>
         <div id="userOutput"><input type="text" id="userInput"></div>
-        <div id="buttonsdiv"><button id="start" class ="button">Start Game</button> <button id="reset" class ="button">Reset Game</button> <button id="instructionsb" class ="button" onclick="">Instructions</button></div>
+        <div id="buttonsdiv"><button id="start" class ="button">Start Game</button> <button id="reset" class ="button">Reset Game</button> <button id="instructionsb" class ="button">Instructions</button></div>
         <div id="instructionsd">
             <ul>
                 <li>Correctly type all the words to gain points.</li>
