--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="buttonsdiv"><button id="start" class ="button">Start Game</button> <button id="reset" class ="button">Reset Game</button> <button id="instructionsb" class ="button">Instructions</button></div>
         <div id="instructionsd">
             <ul>
-                <li>Correctly type all the words to gain points.</li>
+                <li>Correctly type the words to gain points.</li>
                 <li>Race against the clock to get as many points as you can.</li>
                 <li>You only have 60 seconds.</li>
             </ul>
